made some code changes

--- a/src/app/get-ticket/get-ticket.html
+++ b/src/app/get-ticket/get-ticket.html
@@ -79,7 +79,7 @@
           </div>
           <div>
             <p class="text-xs font-medium text-gray-500 uppercase tracking-widest">Starts</p>
-            <p class="text-sm font-semibold text-gray-800 mt-0.5">{{ eventWithTickets.eventStartDate }} at {{ eventWithTickets.eventStartTime }}</p>
+            <p class="text-sm font-semibold text-gray-800 mt-0.5">{{ eventWithTickets.startDate }} at {{ eventWithTickets.startTime }}</p>
           </div>
         </div>
 
@@ -92,7 +92,7 @@
           </div>
           <div>
             <p class="text-xs font-medium text-gray-500 uppercase tracking-widest">Ends</p>
-            <p class="text-sm font-semibold text-gray-800 mt-0.5">{{ eventWithTickets.eventEndDate }} at {{ eventWithTickets.eventEndTime }}</p>
+            <p class="text-sm font-semibold text-gray-800 mt-0.5">{{ eventWithTickets.endDate }} at {{ eventWithTickets.endTime }}</p>
           </div>
         </div>
 
