Added a purchase form

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,11 @@
+<!-- src/app/app.html -->
+<div class="">
+  <!-- Dynamic Navbar -->
+  <app-landing-page-navbar *ngIf="showLandingNavbar"></app-landing-page-navbar>
+  <app-buyer-navbar *ngIf="showBuyerNavbar"></app-buyer-navbar>
 
-
-<router-outlet></router-outlet>
-
-
+  <!-- PAGE CONTENT -->
+  <main >
+    <router-outlet></router-outlet>
+  </main>
+</div>
