made some code changes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <!-- src/app/app.html -->
 <div class="">
   <!-- Dynamic Navbar -->
-  <app-landing-page-navbar *ngIf="showLandingNavbar"></app-landing-page-navbar>
+  <!-- <app-landing-page-navbar *ngIf="showLandingNavbar"></app-landing-page-navbar> -->
   <app-buyer-navbar *ngIf="showBuyerNavbar"></app-buyer-navbar>
 
   <!-- PAGE CONTENT -->
