Combined the two navbars into one shared navbar and added more validations to different components in the code

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,4 @@
-<!-- src/app/app.html -->
-<div class="">
-  <!-- Dynamic Navbar -->
-  <!-- <app-landing-page-navbar *ngIf="showLandingNavbar"></app-landing-page-navbar> -->
-  <app-buyer-navbar *ngIf="showBuyerNavbar"></app-buyer-navbar>
-
+<div >
   <!-- PAGE CONTENT -->
   <main >
     <router-outlet></router-outlet>
