--- a/src/app/dashboard/buyer-dashboard/buyer-dashboard.html
+++ b/src/app/dashboard/buyer-dashboard/buyer-dashboard.html
@@ -1,4 +1,4 @@
-<app-buyer-navbar></app-buyer-navbar>
+<app-shared-navbar></app-shared-navbar>
 
 <main class="flex-1">
   <app-layout></app-layout>
